css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');

body {
  --primary-color: #E6E6E6;
  --secondary-color: #1D1D1F;
  --tertiary-color: #A6FF00;
  background-color: #E6E6E6;
  font-family: "Nunito Sans", Helvetica, sans-serif;
  font-size: 14px;
  min-height: 100dvh;
  margin: 0;
  padding: 0;
}

a {
  color: var(--secondary-color);
  text-decoration: none;
}

ul {
  list-style: none;
}

/* NAVBAR */

nav {
  display: grid;
  grid-template-columns: repeat(3, auto);
  align-items: center;
  background-color: #FFFFFF;
  height: 80px;
  padding: 0 120px;
  position: sticky;
  top: 0;
  z-index: 10;
}

.nav-btn {
  justify-self: end;

}

#nav-links {
  display: grid;
  grid-template-columns: repeat(3, auto);
  margin: 0 auto;
}

#nav-links button {
  padding: 0 5px;
  border: none;
  background-color: transparent;
}

#nav-links button {
  padding: 10px 20px;
  border-radius: 18px;
}

#nav-links button:hover {
  cursor: pointer;
  transition: 0.8s;
  background-color: var(--secondary-color);
  color: var(--primary-color);
  border: none;
}

#nav-button {
  font-size: 15px;
  background-color: var(--tertiary-color);
  border: none;
  border-radius: 18px;
  padding: 9px 20px;
}

#nav-button:hover {
  cursor: pointer;
  background-color: #9bee01;
}

#logo {
  font-size: 26px;
  font-weight: 700;
}

#logo a {
  border: 1px solid transparent;
  border-radius: 5px;
  padding: 5px;
}

#logo a:hover {
  transition: 0.8s;
  border: 1px solid #1d1d1f36;
  border-radius: 5px;
}

@media (min-width: 900px) {
  #nav-links-mobile {
    display: none;
  }
}

@media (max-width: 900px) {
  nav {
    grid-template-columns: repeat(2, auto);
    padding: 0 30px;
  }

  #nav-links-mobile img {
    width: 40px;
  }

  #nav-links-mobile button {
    background-color: transparent;
    border: none;
  }

  #nav-links-mobile button:hover {
    cursor: pointer;
  }

  #nav-links-mobile {
    justify-self: end;
  }

  #nav-links, .nav-btn {
    display: none;
  }
}

/* HERO */
#hero {
  display: grid;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 100dvh;
}

h1 {
  font-size: 4.5em;
  font-weight: 800;
  margin-bottom: 0;
}

h2 {
  font-size: 2.5em;
  margin-top: 0;
}

p {
  font-size: 1.2em;
  font-weight: 600;
}

#hero-links button {
  background-color: transparent;
  border: 1px solid var(--secondary-color);
  padding: 5px 10px;
  border-radius: 15px;
}

#hero-links button:hover {
  cursor: pointer;
  transition: 0.4s;
  background-color: var(--secondary-color);
  color: var(--primary-color);
  border: 1px solid transparent;
}

/* TECHSTACK */
#tech-stack-info {
  display: grid;
  background-color: #202020;
  color: #FFFFFF;
  height: 300px;
  justify-content: center;
  align-items: center;
}

#tech-stack-description {
  text-align: center;
}

#tech-stack-info ul {
  display: grid;
  justify-content: center;
  grid-template-columns: repeat(7, auto);
  gap: 80px;
  padding: 20px 0 0 0;
}

@media (max-width: 1200px) {
  #tech-stack-info ul {
    grid-template-columns: repeat(4, auto);
  }
}

@media (max-width: 700px) {
  #tech-stack-info {
    height: 550px;
  }

  #tech-stack-info ul {
    grid-template-columns: repeat(2, auto);
  }
}

.tech-circle {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: var(--primary-color);
  font-size: 10px;
  border-radius: 50%;
}

.fa-brands {
  font-size: 3.5em;
}

.fa-brands.fa-html5 {
  color: #e67d21;
}

.fa-brands.fa-css3-alt {
  color: #214ce6;
}

.fa-brands.fa-js {
  color: #f8e536;
}

.fa-brands.fa-react {
  color: #21a1e6;
}

.fa-brands.fa-node-js {
  color: #21e645;
}

.fa-brands.fa-python {
  color: #1857a4;
}

.fa-brands.fa-java {
  color: #ca4646;
}

/* ABOUT ME */

#about-me {
  display: grid;
  grid-template-columns: repeat(2, 50%);
  justify-content: center;
  height: 500px;
}

.about-me-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  justify-self: center;
  justify-items: center;
  padding: 0px 120px;
  height: 100%;
}

.about-me-img-container {
  display: flex;
  padding: 100px 0;
  justify-content: center;
  align-items: center;
  background-color: var(--secondary-color);
}

.about-me-img {
  width: 250px;
  height: 250px;
  background-color: var(--primary-color);
}

@media (max-width: 900px) {
  .about-me-description {
    padding: 0 50px;
  }

  .about-me-img-container {
    padding: 30px 0;
    background-color: transparent;
  }

  .about-me-img {
    background-color: var(--secondary-color);
  }
}

@media (max-width: 700px) {
  #about-me {
    grid-template-columns: 1fr;
    padding: 50px 50px;
    gap: 40px;
    text-align: center;
  }

  .about-me-img {
    background-color: var(--secondary-color);
  }
}

/* PROJECTS SECTION */
#projects {
  display: grid;
  grid-template-rows: repeat(3, auto);
  align-items: center;
  padding: 100px 0 30px 0;
}

@media (max-width: 900px) {
  #projects{
    padding: 0;
  }
}

#projects h2 {
  margin-bottom: 0;
}

.projects-description {
  text-align: center;
  padding-bottom: 40px;
}

.projects-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  justify-content: center;
  padding: 0 120px;
}

@media (max-width: 1200px) {
  .projects-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 750px) {
  #projects {
    margin-top: 160px;
  }

  .projects-container {
    grid-template-columns: repeat(2, 1fr); /* Change to 2 columns */
    padding: 0;
  }
}

@media (max-width: 550px) {
  .projects-container {
    grid-template-columns: 1fr; /* Change to 1 column */
    padding: 20px;
  }
}

.project-container {
  background-color: #FFFFFF;
}

.project-preview {
  width: 100%;
  height: 300px;
  background-color: var(--secondary-color);
}

.project-description {
  padding: 15px 20px;
}

.project-description p {
  margin: 0;
}

.project-description p:nth-child(2) {
  margin-bottom: 80px;
}

.project-description a:hover {
  color: #1d1d1f33;
}

/* CTA */
#cta {
  display: grid;
  justify-content: center;
  align-items: center;
  height: 400px;
  text-align: center;
}

#cta p {
  text-align: center;
  justify-self: center;
}

form {
  display: grid;
  grid-template-rows: repeat(4, auto);
  justify-content: center;
  gap: 10px;
}

input, textarea {
  padding: 15px;
}

form #submit {
  background-color: var(--secondary-color);
  color: #FFFFFF;
  border: none;
  border-radius: 3px;
}

/* FOOTER */
footer {
  display: grid;
  grid-template-columns: repeat(2, auto);
  align-items: center;
}

footer #logo {
  justify-self: end;
  margin-right: auto;
  padding-left: 120px;
}

footer ul {
  padding: 0;
}

.footer-links {
  text-align: center;
  font-size: 13.5px;
}

.footer-links li {
  padding: 10px 0;
}

.footer-titles {
  font-size: 16px;
  font-weight: 700;
}

.grid-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

@media (max-width: 900px) {
  footer {
    grid-template-columns: 1fr;
    align-items: center;
    justify-content: center;
    padding-bottom: 50px;
  }

  footer #logo, footer ul {
    justify-self: center;
    padding: 0;
    margin: 0;
  }

  footer #logo {
    padding-bottom: 30px;
  }
}

